# OOPLabs

Lab0/: CMakeLists.txt  ClassCpp.cpp  ClassCpp.h  SaveCode  main.cpp
Lab1/: CMakeLists.txt  Test.cpp  Trit.cpp  Trit.h  TritSet.cpp  TritSet.h
Lab2(Workflow Executor)/: CMakeLists.txt  DumpBlock.cpp  DumpBlock.h  GrepBlock.cpp  GrepBlock.h  ProgramParser.cpp  ProgramParser.h  ReaderBlock.cpp  ReaderBlock.h  ReplaceBlock.cpp  ReplaceBlock.h  SortBlock.cpp  SortBlock.h  Worker.h  Workflow.cpp  Workflow.h  WriterBlock.cpp  WriterBlock.h  main.cpp
Lab3(ShipBattle)/: CMakeLists.txt  ConsolePlayer.cpp  ConsolePlayer.h  Define.h  GameCore.cpp  GameCore.h  Helpfunction.cpp  Helpfunction.h  Map.cpp  Map.h  OptionalPlayer.cpp  OptionalPlayer.h  Player.cpp  Player.h  RandomPlayer.cpp  RandomPlayer.h  Ships.cpp  Ships.h  main.cpp
Lab4(CSV-Parser)/: CMakeLists.txt  CSVParser.h  main.cpp
